adjustment for locking, fixes for filestore